--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@ moonraker:
 proxy:
   host: "0.0.0.0"
   port: 7126
+  debug: false  # Set to true for detailed logging
 
 preprocessing_rules:
   - name: "example_rule"
